# lshvec-upcxx

./: .gitignore  CMakeLists.txt  README.md
cmake/: CMakefile.external  UPCXXConfig.cmake
data/: sample.fa  sample.fq  sample.txt
extlib/: .gitignore
notebook/: .gitignore  Tutorial_ActinoMock_Nanopore.ipynb
src/: CRandProj.cpp  CRandProj.h  LSHVECConfig.h.in  ProjConfig.h.in  config.h  distr_kgraph_graph.h  distrmap.h  hash_main.cpp  hasher_main.cpp  io.cpp  io.h  kmer.cpp  kmer.h  log.cpp  log.h  lshvec_main.cpp  make_kgraph_upcxx.cpp  model.h  model_upcxx.h  pbar.h  serialization.cpp  serialization.h  test_hash.cpp  test_kmer.cpp  test_random_model.cpp  test_read_fasta.cpp  test_utils.cpp  train_main.cpp  train_upcxx_main.cpp  trainer_main.cpp  transform_main.cpp  upchelper.h  upcxx_comp.h  utils.cpp  utils.h
